# vstplugin

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.txt  Makefile  README.md  README.txt  VstPlugin.sc  VstPlugin.schelp  VstPluginController.schelp  vsthost-test.pd  vsthost~-help.pd  vstplugin-test.pd  vstplugin~-help.pd
.git-ci/: get_fst.sh  get_vst.sh  get_vst2.sh  get_vst3.sh  gitlab-iem.yml
.gitlab/issue_templates/: Default.md
pd/: CMakeLists.txt  Makefile  README.md  probe.make  vstpluginbrowser-help.pd  vstpluginbrowser.pd  vstplugin~-help.pd  vstplugin~-mc.pd  vstpresetbrowser-help.pd  vstpresetbrowser.pd
pd-lib-builder/: Makefile.pdlibbuilder
pd/pd-lib-builder/: Makefile.pdlibbuilder
pd/src/: vstcommon.cpp  vstplugin.cpp  vstplugin.h  vstplugin~.cpp  vstplugin~.h  vstplugin~.rc  vstsearch.cpp
sc/: CMakeLists.txt  README.md  VSTPlugin.sc  VSTPluginController.sc  VSTPluginGui.sc  VstPlugin.sc  VstPluginController.sc  VstPluginGui.sc
sc/Help/Classes/: VSTPlugin.html  VSTPluginController.html  VSTPluginDesc.html  VSTPluginGui.html  VSTPluginMIDIProxy.html
sc/Help/Guides/: HOA_IEM.html
sc/Help/Reference/: VSTPlugin-UGen-Documentation.html
sc/HelpSource/: VstPlugin.schelp  VstPluginController.schelp  VstPluginGui.schelp
sc/HelpSource/Classes/: VSTPlugin.schelp  VSTPluginController.schelp  VSTPluginDesc.schelp  VSTPluginGui.schelp  VSTPluginMIDIProxy.schelp  VSTPluginNodeProxyController.schelp  VstPlugin.schelp  VstPluginController.schelp  VstPluginGui.schelp
sc/HelpSource/Guides/: HOA_IEM.schelp
sc/HelpSource/Reference/: VSTPlugin-UGen-Documentation.schelp
sc/classes/: VSTPlugin.sc  VSTPluginController.sc  VSTPluginDesc.sc  VSTPluginGui.sc  VSTPluginMIDIProxy.sc  VSTPluginNodeProxy.sc
sc/doc/: VSTPlugin-UGen-Internals.md  VSTPlugin-UGen-Reference.md
sc/src/: VSTPlugin.cpp  VSTPlugin.h  VSTPlugin.rc  VSTPluginUGen.cpp  VSTPluginUGen.h  VstPluginUGen.cpp  VstPluginUGen.h  rt_shared_ptr.hpp
src/: .dir-locals.el  Utility.h  VST2Plugin.cpp  VST2Plugin.h  VSTPlugin.cpp  VSTPlugin.h  VSTPluginInterface.h  VSTWindow.cpp  VSTWindow.h  VSTWindowCocoa.h  VSTWindowCocoa.mm  VSTWindowWin32.cpp  VSTWindowWin32.h  VSTWindowX11.cpp  VSTWindowX11.h  VstPluginUGen.cpp  VstPluginUGen.h  vsthost.cpp  vsthost.h  vsthost~.cpp  vstplugin~.cpp  vstplugin~.h
src/old/: VSTInterface.h  VSTProcessor.cpp  VSTProcessor.h
src/sc/: CMakeLists.txt  VstPlugin.cpp  VstPlugin.sc
test/: CMakeLists.txt  hashtable_test.cpp  normalize_path.cpp  shm_test.cpp
vst/: Bridge.cpp  Bridge.h  Bus.h  CMakeLists.txt  CpuArch.cpp  CpuArch.h  DeferredPlugin.h  EventLoop.h  FileUtils.cpp  FileUtils.h  HashTable.h  HostApp.cpp  HostApp.h  Interface.h  Loader.cpp  Lockfree.h  LockfreeFifo.h  Log.h  MiscUtils.cpp  MiscUtils.h  Module.cpp  Plugin.cpp  PluginBridge.cpp  PluginBridge.h  PluginClient.cpp  PluginClient.h  PluginCommand.h  PluginDesc.cpp  PluginDesc.h  PluginDictionary.cpp  PluginDictionary.h  PluginFactory.cpp  PluginFactory.h  PluginInfo.cpp  PluginInfo.h  PluginManager.cpp  PluginManager.h  PluginServer.cpp  PluginServer.h  Search.cpp  (+31 more)
